implementacion de css en el archivo style.css, index.html y login.html

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
   <head>
     <title style="font-family:courier;">Bienvenidos</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+     <link rel="stylesheet" href="../proyect_02/styles/styles.css"></link>
   </head>
 
-  <body style="background-color:#81DAF5;">
+  <body class="upper">
     <center>
       <div>
-        <h1 style="color:blue;" style="text-align:center;">BIENVENIDOS</h1>
+        <h1 >BIENVENIDOS</h1>
       </div>
 
       <div>
